--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,14 @@
             <meta charset="UTF-8" />
             <link rel="icon" type="image/svg+xml" href="/vite.svg" />
             <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+            <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
             <title>Proyecto</title>
+            <style>
+              main{
+                width: auto;
+                height: auto;
+              }
+            </style>
           </head>
           <body>
             <header></header>
